apo install successfully

--- a/templates/dsm.opt-TEMP.j2
+++ b/templates/dsm.opt-TEMP.j2
@@ -2,5 +2,5 @@
 * O VERBOSE
 * O MEMORYEFFICIENTBACKUP   No
 * O TAPEPrompt              No
-  SErvername   sym6-{{ ansible_hostname }}
+  SErvername   sym6
   QUIET
