--- a/templates/dsmc-TEMP.j2
+++ b/templates/dsmc-TEMP.j2
@@ -1,4 +1,4 @@
 #!/bin/bash
 
-export DSM_CONFIG=/opt/tivoli/tsm/client/ba/bin/dsm.opt-{{ ansible_hostname }}
+export DSM_CONFIG=/opt/tivoli/tsm/client/ba/bin/dsm.opt
 dsmc $@
