--- a/templates/dsm.inclexcl-TEMP.j2
+++ b/templates/dsm.inclexcl-TEMP.j2
@@ -1,6 +1,4 @@
 *
-include         /etc/.../*
-
 exclude.dir     /.../SCRATCH
 exclude.dir     /.../Scratch
 exclude.dir     /.../scratch
@@ -9,5 +7,5 @@ exclude.dir     /.../.dt
 *
 exclude         /.../kio_http/cache/.../*
 exclude         /.../.opera/.../cache4/.../*
-*exclude.dir     /.../.cache
+exclude.dir     /.../.cache
 exclude     /.../.cache/.../*
